# proyeccion-turistica

./: .Renviron.example  .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  deploy.R  export_charts.R  install_libs.R  pyproject.toml  run.py  run_pipeline.bat  run_pipeline.sh
.github/workflows/: ci.yml
dashboard/: app.R  config.yml  global.R  server.R  ui.R
dashboard/data/llegadas/: llegadas_nacionalidad.csv  llegadas_nacionalidad.rds  llegadas_nacionalidad_forecast.csv  llegadas_paso.csv  llegadas_paso.rds  llegadas_paso_forecast.csv
dashboard/data/salidas/: arima_202512.csv  arima_202603.csv  frecuencia_vuelos_salientes.csv  merged_202512.csv  merged_202603.csv  metricas_arima.csv  metrics_stl.csv  sarimax_202512.csv  sarimax_202603.csv  trend_202512.csv  (+2 more)
dashboard/functions/: analysis.R  data_processing.R  llegadas_mappings.R
dashboard/modules/: modal_changes.R  server_components.R  server_components.R_temp  server_components.R_temp2  ui_components.R
dashboard/ui/: conjunto_analitica.R  conjunto_llegadas.R  conjunto_salidas.R
data/: README.md
extract/: config.py  main.py  requirements.txt  scraper_llegadas.py  scraper_salidas.py  scraper_trafico.py  utils.py
jekyll/: proyeccion-turistica.md
proyeccion_turistica.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: deploy_jekyll.py
tests/: test_config.py  test_utils.py
transform/: arima_forecast.R  config.R  llegadas_transform.R  main.R  mappings.R  sarimax_forecast.R  stl_decomposition.R  trafico_transform.R  unification.R  utils.R
(+10 files in other folders)
