[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyeccion-turistica"
version = "1.0.0"
description = "Pipeline ETL para proyección de flujos turísticos de Chile"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manuel San Cristóbal", email = "msancristo@fen.uchile.cl"}
]
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/manuelsancristobal/proyeccion-turistica"
Repository = "https://github.com/manuelsancristobal/proyeccion-turistica"

[tool.setuptools.packages.find]
include = ["extract*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"extract/main.py" = ["E402"]

[tool.coverage.run]
source = ["extract"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
